# CS100-ShanghaiTech

./: README.md
hw1/solution/: hw1-1.c  hw1-2.c  hw1-3.c
hw1/template/: hw1-1-student.c  hw1-2-student.c  hw1-3-student.c
hw1/test/: hw1-3-gen.py
hw2/solution/: hw2-1.c  hw2-2.c  hw2-3.c
hw2/template/: README.md
hw2/test/2.3/: 1.in  1.out  10.in  10.out  2.in  2.out  3.in  3.out  4.in  4.out  5.in  5.out  6.in  6.out  7.in  7.out  8.in  8.out  9.in  9.out
hw3/template/: README.md  template_q2q3.c
hw4/solution/: hw4_2_ref_MacOS
hw4/template/: hw4-2.cpp
hw4/test/: hw4.cpp
hw5/: hw5.md
hw5/solution/: hw5-1_ref.cpp  hw5-2_ref.cpp  hw5-3_ref.cpp
hw5/template/: hw5-1_stu.cpp  hw5-2_stu.cpp  hw5-3_stu.cpp
hw5/tests/: README.md
hw5/tests/5-2/: 1.in  1.out  10.in  10.out  2.in  2.out  3.in  3.out  4.in  4.out  5.in  5.out  6.in  6.out  7.in  7.out  8.in  8.out  9.in  9.out  gen.py  hw5-2  out.txt
hw6/: README.md
hw6/template/: all_provided_code_for_hw6.cpp
hw7/solution/HW7/: CMakeLists.txt
hw7/template/: CMakeLists.txt
hw7/template/data/: soccer.txt
hw7/template/src/: CMakeLists.txt  FilteredImage.cpp  ThreadedFilteredImage.cpp  ThreadedFilteredImage.hpp  image_io.cpp  image_io.hpp  types.hpp
hw7/template/test/: CMakeLists.txt  test1.cpp  test2.cpp
hw8/: HW8.md
hw8/solution/src/: Poly.hpp  Poly_impl.hpp  functional_forms.hpp  newton.hpp
hw8/solution/test/: CMakeLists.txt  test_lambdas.cpp  test_newton.cpp
hw8/template/: CMakeLists.txt
hw8/template/src/: Poly.hpp  functional_forms.hpp
hw8/test/: README.md
(+51 files in other folders)
